--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +16,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
@@ -33,7 +37,7 @@
         <section>
             <div class="section_one">
                 <div class="section_one_center">
-                    <div class="section_one_center_left">
+                    <div class="section_one_center_left" >
                         <h4>Learn to enjoy every minute of your life.</h4>
                         <p>Living Life Tomorrow's fate, though thou be wise, Thou canst not tell nor yet surmise; Pass, therefore, not today in vain, For it will never come again. You know, my friends, with what a brave carouse I made a Second Marriage in my house; favored old barren reason from my bed, and took the daughter of the vine to spouse.  The Worldly Hope men set their Hearts upon Turns Ashes - or it prospers; and anon, Like Snow upon the Desert's dusty Face, Lighting a little hour or two - is gone.</p>
                     </div>
@@ -48,40 +52,40 @@
             <div class="section_cards">
                 <div class="cards">
                     <div class="cards_img">
-                        <div class="cards_img_left">
+                        <div class="cards_img_left" data-aos="fade-right">
                             <img src="./img/pexels-photo-5672483.jpeg" alt="">
                         </div>
-                        <div class="cards_img_right">
+                        <div class="cards_img_right" data-aos="fade-left">
                             <i class="fa-solid fa-mobile-button"></i>
                             <h5>MARKETING</h5>
                             <p>Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband boy her had hearing. Law others theirs passed but wishes. </p>
                         </div>
                     </div>
                     <div class="cards_text">
-                        <div class="cards_text_left">
+                        <div class="cards_text_left" data-aos="fade-right">
                             <h2>Our advantages</h2>
                         </div>
-                        <div class="cards_text_right">
+                        <div class="cards_text_right" data-aos="fade-left">
                             <i class="fa-solid fa-lightbulb"></i>
                             <h5>STRATEGY</h5>
                             <p>Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband boy her had hearing. Law others theirs passed but wishes. </p>
                         </div>
                     </div>
                     <div class="cards_img">
-                        <div class="cards_img_left">
+                        <div class="cards_img_left" data-aos="fade-right">
                             <img src="./img/pexels-photo-3526221.jpeg" alt="">
                         </div>
-                        <div class="cards_img_right">
+                        <div class="cards_img_right" data-aos="fade-left">
                             <i class="fa-solid fa-gear"></i>
                             <h5>PLAN</h5>
                             <p>Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband boy her had hearing. Law others theirs passed but wishes. </p>
                         </div>
                     </div>
                     <div class="cards_text">
-                        <div class="cards_text_left creative">
+                        <div class="cards_text_left creative" data-aos="fade-right">
                             <h2>Creative form in our design</h2>
                         </div>
-                        <div class="cards_text_right">
+                        <div class="cards_text_right" data-aos="fade-left">
                             <p class="our">Our agents are engaged and experienced in the Miami real estate market and well informed about the communities they service.  </p>
                             <a href="#">READ MORE</a>
                         </div>
@@ -109,11 +113,11 @@
         <section>
             <div class="blue_back">
                 <div class="black_container">
-                    <div class="black_container_left">
+                    <div class="black_container_left" data-aos="fade-right" >
                         <h2>Testimonials</h2>
                     </div>
                     <div class="black_container_right">
-                      <div class="first_card">
+                      <div class="first_card" data-aos="fade-left" data-aos-duration="1500">
                         <div class="black_container_right_text">
                             <h5>LINDA HUDSON</h5>
                             <p>"Aenean pulvinar dui ornare, feugiat lorem non, ultrices justo. Mauris efficitur, mauris in auctor euismod, quam elit ultrices urna"</p>
@@ -122,7 +126,7 @@
                             <img src="./img/pexels-photo-6139560.jpeg" alt="">
                         </div>
                       </div>
-                      <div class="second_card">
+                      <div class="second_card" data-aos="fade-left" data-aos-duration="1500">
                         <div class="black_container_right_text">
                             <h5>PAUL LARSON</h5>
                             <p>"Aenean pulvinar dui ornare, feugiat lorem non, ultrices justo. Mauris efficitur, mauris in auctor euismod, quam elit ultrices urna"</p>
@@ -139,22 +143,22 @@
             <div class="last_section">
                 <div class="last_container">
                     <div class="img_cont">
-                        <img src="./img/18a4c07eae54c988ce9e949279e2304c.png" alt="">
+                        <img src="./img/18a4c07eae54c988ce9e949279e2304c.png" alt="" data-aos="fade-right">
                     </div>
                     <div class="img_cont">
-                        <img src="./img/d7020590e6c763d6ee58be5ecb46c512.png" alt="">
+                        <img src="./img/d7020590e6c763d6ee58be5ecb46c512.png" alt="" data-aos="fade-right">
                     </div>
                     <div class="img_cont">
-                        <img src="./img/6a9d2bdc04f701c17b6e1a6cf2b4e15e.png" alt="">
+                        <img src="./img/6a9d2bdc04f701c17b6e1a6cf2b4e15e.png" alt="" data-aos="fade-right">
                     </div>
                     <div class="img_cont">
-                        <img src="./img/3bf2774ea5bf6328544cdfb859e906ff.png" alt="">
+                        <img src="./img/3bf2774ea5bf6328544cdfb859e906ff.png" alt="" data-aos="fade-left">
                     </div>
                     <div class="img_cont">
-                        <img src="./img/7a98c5d838012ea0485ca3103b0197e2.png" alt="">
+                        <img src="./img/7a98c5d838012ea0485ca3103b0197e2.png" alt="" data-aos="fade-left">
                     </div>
                     <div class="img_cont">
-                        <img src="./img/cc1834811c838f0d52d49c27f021383e.png" alt="">
+                        <img src="./img/cc1834811c838f0d52d49c27f021383e.png" alt="" data-aos="fade-left">
                     </div>
                 </div>
             </div>
@@ -164,7 +168,7 @@
         <div class="footer_top">
             <div class="bb">
 
-            <div class="contact_container">
+            <div class="contact_container" >
                 <div class="contact_container_left">
                    <div class="contact_container_left_top">
                     <h2>Contact</h2>
@@ -191,11 +195,6 @@
                 </div>
                 <div class="contact_container_right">
                     <p>JOIN US</p>
-                    <!-- <select>
-                        <option value="Item1">Item1</option>
-                        <option value="Item2">Item2</option>
-                        <option value="Item3">Item3</option>
-                    </select> -->
                     <input type="text" placeholder="Enter your Name">
                     <input type="text" placeholder="Enter a valid email address">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Enter your message"></textarea>
@@ -208,5 +207,9 @@
             <img src="./img/pexels-photo-1105766.jpeg" alt="">
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
